<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:background="@android:color/white"
                android:layout_marginTop="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_margin="10dp"
                    android:id="@+id/logo"
                    android:paddingStart="5dp"
                    android:src="@mipmap/ic_launcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"/>
                <TextView
                    android:id="@+id/text_logo"
                    android:layout_toEndOf="@id/logo"
                    android:text="@string/app_name"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </RelativeLayout>
            <RelativeLayout
                android:background="@android:color/white"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_margin="10dp"
                    android:id="@+id/info"
                    android:src="@drawable/ic_info_outline_black_18dp_1x"
                    android:paddingStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"/>

                <TextView
                    android:id="@+id/text_info"
                    android:layout_toEndOf="@id/info"
                    android:text="@string/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_toEndOf="@id/info"
                    android:layout_below="@id/text_info"
                    android:text="@string/version_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/ratingClick"
                android:background="@android:color/white"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">
                <ImageView
                    android:layout_margin="10dp"
                    android:id="@+id/rating"
                    android:src="@drawable/ic_star_rate_black_18dp_1x"
                    android:paddingStart="20dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"/>

                <TextView
                    android:layout_toEndOf="@id/rating"
                    android:text="@string/rating"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/sendEmail"
                android:background="@android:color/white"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_margin="10dp"
                    android:id="@+id/info_email"
                    android:src="@drawable/ic_mail_black_18dp_1x"
                    android:paddingStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"/>

                <TextView
                    android:id="@+id/text_info_email"
                    android:layout_toEndOf="@id/info_email"
                    android:text="@string/feefback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_toEndOf="@id/info_email"
                    android:layout_below="@id/text_info_email"
                    android:text="@string/email_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:paddingBottom="15dp"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:background="@android:color/white"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:padding="15dp"
                    android:text="@string/student_profile"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </RelativeLayout>
            <RelativeLayout
                android:background="@android:color/white"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_margin="10dp"
                    android:id="@+id/stu_info"
                    android:src="@drawable/ic_account_circle_black_24dp_1x"
                    android:paddingStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"/>

                <TextView
                    android:id="@+id/text_info_stu"
                    android:layout_toEndOf="@id/stu_info"
                    android:text="Preety"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_toEndOf="@id/stu_info"
                    android:layout_below="@id/text_info_stu"
                    android:text="R.I.E.T , Phagwara"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/playStore"
                android:background="@android:color/white"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">
                <ImageView
                    android:layout_margin="10dp"
                    android:id="@+id/play_store"
                    android:src="@drawable/ic_send_black_18dp_1x"
                    android:paddingStart="20dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"/>

                <TextView
                    android:layout_toEndOf="@id/play_store"
                    android:text="@string/store_name"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

            </RelativeLayout>
            <RelativeLayout
                android:background="@android:color/white"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_margin="10dp"
                    android:id="@+id/info_trainer"
                    android:src="@drawable/ic_supervisor_account_black_18dp_1x"
                    android:paddingStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"/>

                <TextView
                    android:id="@+id/text_info_trainer"
                    android:layout_toEndOf="@id/info_trainer"
                    android:text="@string/info_trainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_toEndOf="@id/info_trainer"
                    android:layout_below="@id/text_info_trainer"
                    android:text="@string/trainer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:paddingBottom="15dp"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/company"
                android:background="@android:color/white"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_margin="10dp"
                    android:id="@+id/info_company"
                    android:src="@drawable/ic_language_black_24dp_1x"
                    android:paddingStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"/>

                <TextView
                    android:id="@+id/text_info_company_name"
                    android:layout_toEndOf="@id/info_company"
                    android:text="@string/company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_toEndOf="@id/info_company"
                    android:layout_below="@id/text_info_company_name"
                    android:text="@string/company_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:paddingBottom="15dp"/>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>